reason_4.0/www/local/luther_2014/stylesheets/scss/sites/home.scss
// Foundation imports
@import "settings";
@import "foundation/components/grid";

// Compass imports
@import "compass/css3";
@import "compass/css3/opacity";
@import "compass/css3/transition";

// Font Awesome Imports
@import "font-awesome/variables";
@import "font-awesome/core";

// Luther imports
@import "extends";

/* STRUCTURE */

.lutherHome {

	#wrapper #global-banner #search-nav.open {
	    margin-bottom: -4px; // removes the gap between the search and feature when the mobile search is open
	}

	#minisite {

		@media #{$small-only} {
			padding-top: 4px !important;
		}

		@media #{$medium-only} {
			padding-top: 4px !important;
		}

		@media #{$large-up} {
			//padding-top: 16px !important;
		}
	}

	#emergencyPreempt {
		margin-bottom: - rem-calc(4);
	}

	#welcomeRow {
		@include grid-row;
	}

	#contentAndRelated {

		#contentFeature {
			margin-bottom: 0;

			@media #{$small-only} {
				.features {
					padding: 0;
					height: 224px;
				
					img {
						width: 646px;
						max-width: 10000px !important;
						height: 224px !important;
						position: absolute;
						margin-left: -323px;
					}
				}
			}

			@media #{$large-up} {
				@include grid-column($columns: 16, $collapse: true);
				//float: right;

				.featuresModule {
					max-width: 100% !important;

					.featureInfoWrap {
						background: none !important;

						.featureInfo {
							background: none !important;
							bottom: rem-calc(16);
							right: rem-calc(16);

							.featureTitle {
								display: block;
								float: left;
								font-size: rem-calc(45);
								background: rgb(255,255,255);
								background: rgba(255,255,255,.85);
								color: $lc-blue-light !important;
								padding: rem-calc(12);
								margin-bottom: rem-calc(12);
								text-align: right;

								a {
									color: $lc-blue-light !important;
								}
							}

							$padding-multi-line: rem-calc(12);
							$feature-text-font-size: rem-calc(24);
							.featureText {
								display: block;
								float: left;
								clear: left;
								text-align: left;
								font-size: rem-calc(24);
								margin: 0 $padding-multi-line;
								padding: 0;
								
								
								span,
								a {
									display: inline;
									background: rgb(255,255,255);
									background: rgba(255,255,255,.85);
									color: $lc-blue-light !important;
									line-height: rem-calc(46);
									padding: rem-calc(6);
									padding-left: 0;
									padding-right: 0;
									box-shadow: $padding-multi-line 0 0 rgba(255,255,255,.85), - $padding-multi-line 0 0 rgba(255,255,255,.85);
								}

								span:before,
								a:before {
									color: $lc-blue-light !important;
								}
							}
						}
					}
				}
			}
		}

		#relatedSections {
			clear: both;
			padding: 0;
			@include grid-row();
			margin-top: $column-gutter;

			> div {
				background: none;
			}

			@media #{$medium-up} {
				@include grid-row($behavior: nest);
				float: none;
				margin-top: $column-gutter;
			}

			h3 {
				border-bottom: 1px solid $lc-grey;
				margin: 0;
				padding-bottom: rem-calc(12); 
			}

			.dayEvents {
				
				.event {

					a { // Event title
						font-size: 1.125rem;
					}
				}
			}
		}

		@media #{$medium-up} {
			#preSidebar {
				@include grid-column(8);
			}

			#sidebar {
				@include grid-column(8);
			}

			#postSidebar {
				clear: left;
				@include grid-column($columns:12, $push: 2);
			}
		}

		@media #{$medium-high-up} {
			#preSidebar,
			#sidebar,
			#postSidebar {
				@include grid-column($columns: 5.3333333, $push: 0);
				clear: none;
			}
		}

		#calloutSections {
			margin-top: $column-gutter;
			@include grid-row;

			@media #{$small-high-up} {
				@include grid-row($behavior: nest);
				margin-top: $column-gutter;
			}

			.blurbs {
				// "Callout" blurbs rely on specific HTML markup, generated by the WYSIWYG
				// Add Image (full width), Heading (<h4>), description text (<p>), and link (<p><a>).
				// Resulting markup: 
				//<p>
				//<img src="//luther.edu/reason/images/540599.jpg" alt="Test Image">
				//</p>
				//<h4>Luther Book Shop</h4>
				//<p>Your source for Norse apparel, AA batteries, and Mother's Day cards.</p>
				//<p><a class="more" href="#">LC Book Shop Website</a></p>
			
				.blurb {

					@media #{$small-high-up} {
						@include grid-column(8);
					}

					@media #{$medium-high-up} {
						@include grid-column(4);
					}

					.blurbInner {
						border-top: 12px solid;
						background: lighten($lc-grey, 6%);
						@include box-shadow(rgba(0,0,0,.18) 0 2px 2px);
						padding-bottom: $column-gutter/3;

						> * { // equal left/right padding for ALL blurb content 
							padding: 0 $column-gutter/2;
						}

						p:first-child { // Removes padding from the first paragraph, which wraps the image.
							padding: 0;
							margin: 0;
						}

						img:first-child { // Removes left/right padding from images. Adds padding between image and text.
							padding: 0 0 $column-gutter/2;
						}
					}
				
					.more {

						&:after {
							@extend .fa;
							content: $fa-var-arrow-circle-right;
							margin-left: rem-calc(6);
						}
					}

					&:nth-child(4n+1) {
						.blurbInner {
							border-color: $lc-yellow;
							//background: lighten($lc-yellow, 50%);
						}
					}

					&:nth-child(4n+2) {
						.blurbInner {
							border-color: $lc-green;
							//background: lighten($lc-green, 60%);
						}
					}

					&:nth-child(4n+3) {
						.blurbInner {
							border-color: $lc-red;
							//background: lighten($lc-red, 60%);
						}
					}

					&:nth-child(4n+4) {
						.blurbInner {
							border-color: $lc-blue-light;
							//background: lighten($lc-blue-light, 50%);
						}
					}
				}

			} // .blurbs

		} // #calloutSections

	} // #contentAndRelated

	// ICONS

	.pubLinks a,
	.more {
		&:before {
			@extend .fa;
			margin-right: rem-calc(8);
		}
	}

	#pageContent .more {
		&:before {
			content: $fa-var-arrow-circle-right;
		}
	}

	.pubLinks a {
		&:before {
			content: $fa-var-th-list;
		}
	}

	#postSidebar .more {
		&:before {
			content: $fa-var-youtube-play;
		}
	}

	// MODULES

	.moduleNav ul {
		@extend .zero-out;
	}

} // lutherHome

